// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accordion Accordion Dynamic 1`] = `
Array [
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#5BE6C3",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      First
    </div>
  </div>,
  <div
    style={
      Object {
        "padding": "6px",
      }
    }
  >
    Expanded
  </div>,
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#F5F7FA",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      Second
    </div>
  </div>,
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#F5F7FA",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      Third
    </div>
  </div>,
]
`;

exports[`Storyshots Accordion Accordion Selected 1`] = `
Array [
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#F5F7FA",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      First
    </div>
  </div>,
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#5BE6C3",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      Second
    </div>
  </div>,
  <div
    style={
      Object {
        "padding": "6px",
      }
    }
  >
    Expanded
  </div>,
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#F5F7FA",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      Third
    </div>
  </div>,
]
`;

exports[`Storyshots Accordion Accordions Closed 1`] = `
Array [
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#F5F7FA",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      First
    </div>
  </div>,
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#F5F7FA",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      Second
    </div>
  </div>,
  <div
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#F5F7FA",
        "borderRadius": "6px",
        "cursor": "pointer",
        "margin": "2px",
        "padding": "12px",
      }
    }
  >
    <div>
      Third
    </div>
  </div>,
]
`;
